--- a/.github/workflows/simple-deploy.yml
+++ b/.github/workflows/simple-deploy.yml
@@ -1,4 +1,4 @@
-name: Static Site Deploy
+name: Simple Deploy
 
 on:
   push:
@@ -11,8 +11,11 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,18 +26,11 @@ jobs:
           node-version: '18'
           cache: 'npm'
           
-      - name: Install root dependencies
+      - name: Install dependencies
         run: npm install
         
-      - name: Install client dependencies
-        run: |
-          cd client
-          npm install
-          
-      - name: Build client
-        run: |
-          cd client
-          npm run build
+      - name: Build
+        run: npm run build
         env:
           VITE_SUPABASE_URL: https://demo.supabase.co
           VITE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRlbW8iLCJyb2xlIjoiYW5vbiIsImlhdCI6MTY0NTQwNzI0MCwiZXhwIjoxOTYwOTgzMjQwfQ.demo
@@ -45,15 +41,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './client/dist'
+          path: './dist'
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
